# clipvault

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
packaging/: PKGBUILD  clipvault.desktop  clipvault.service  hyprland-clipvault.conf  waybar-clipvault.jsonc
quickshell/: Card.qml  HotZone.qml  README.md  Settings.qml  Shelf.qml  Theme.qml  shell.qml
src/: config.rs  gui.rs  hover.rs  icons.rs  ipc.rs  lib.rs  main.rs  monitor.rs  ocr.rs  store.rs
