[package]
name = "clipvault"
version = "0.1.0"
edition = "2024"
description = "Headless clipboard-history daemon with Wayland-native monitoring and a JSON IPC socket"
license = "MIT"

[dependencies]
wl-clipboard-rs = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
interprocess = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
fuzzy-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
serde_json = "1.0.150"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
